--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@iconify-json/mdi": "^1.1.52",
     "@vueuse/core": "^10.2.0",
+    "cheerio": "1.0.0-rc.12",
     "lodash-es": "^4.17.21",
     "nanoid": "^4.0.2",
     "nodemailer": "^6.9.3"
